frontend: fix invisible header background

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,7 +7,7 @@ html, body {
 header.billboard {
 	padding: 2rem 1rem;
 	margin-bottom: 2rem;
-	background-color: #e9ecef;
+	background-color: #c8cbce;;
 	border-radius: .3rem;
 }
 
